kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model
spec:
  replicas: 2
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
      - name: model
        image: ghcr.io/remla24-team-5/model-service:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: ghcr.io/remla24-team-5/app:latest
        ports:
        - containerPort: 5000
