kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-app
  labels:
    app: service-app
spec:
  selector:
    app: app
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-model
spec:
  selector:
    app: model
  ports:
    - port: 8000
      targetPort: 8000
