kubernetes/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: ghcr.io/remla24-team-5/app:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-app
  labels:
    app: service-app-monitor
spec:
  type: LoadBalancer
  selector:
    app: app
  ports:
    - port: 5000
      targetPort: 5000
# ---
# apiVersion: monitoring.coreos.com/v1
# kind: ServiceMonitor
# metadata:
#   name: app-monitor
#   labels:
#     release: app-prometheus
# spec:
#   selector:
#     matchLabels:
#       app: service-app
#   endpoints:
#   - interval: 5s # change once working
