kubernetes/model-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model
  labels:
    app: model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
      - name: model
        image: ghcr.io/remla24-team-5/model-service:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service-model
spec:
  type: LoadBalancer
  selector:
    app: model
  ports:
    - port: 8000
      targetPort: 8000
