kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
spec:
  defaultBackend:
    service:
      name: service-app
      port:
        number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-model
spec:
  defaultBackend:
    service:
      name: service-model
      port:
        number: 8000
