kubernetes/destination-rule-mirrors.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: model-destination
spec:
  host: model-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
