kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
spec:
  defaultBackend:
    service:
      name: service-app
      port:
        number: 5000
