kubernetes/istio-shadow-launch.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: model-destination
spec:
  host: model-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: model-virtual-service
spec:
  hosts:
  - model-service
  http:
  - route:
    - destination:
        host: model-service
        subset: v1
    mirror:
      host: model-service
      subset: v2
