kubernetes/virtual-service-mirrors.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: model-virtual-service
spec:
  hosts:
  - model-service
  http:
  - route:
    - destination:
        host: model-service
        subset: v1
    mirror:
      host: model-service
      subset: v2
